<resources>
    <string name="app_name">Calcul PA</string>


    <string name="titre_app">Calcul prix achat</string>
    <string name="label1">Montant en DH :</string>
    <string name="label2">Devise :</string>
    <string name="devise1">Dollar</string>
    <string name="devise2">Euro</string>
    <string name="bouton1">Convertir</string>
    <string name="bouton2">Initialiser</string>
    <string name="default_res">Montant en Euro : 0.00</string>
    <string name="val_res1">Montant en Dollar : %.2f</string>
    <string name="val_res2">Montant en Euro : %.2f</string>

</resources>