<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fond_ecran"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        style="@style/BasestyleTextView.TitreStyle"
        android:text="@string/titre_app" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/LabelStyle"
            android:text="@string/label1" />

        <EditText
            android:id="@+id/eval"
            style="@style/EditTextStyle" />

    </LinearLayout>

    <TextView
        style="@style/LabelStyle"
        android:text="@string/label2" />

    <RadioGroup
        android:id="@+id/grp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rd1"
            style="@style/RadioButtonStyle"
            android:text="@string/devise1" />

        <RadioButton
            android:id="@+id/rd2"
            style="@style/RadioButtonStyle"
            android:checked="true"
            android:text="@string/devise2" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/b1"
            style="@style/ButtonStyle"
            android:text="@string/bouton1" />

        <Button
            android:id="@+id/b2"
            style="@style/ButtonStyle"
            android:text="@string/bouton1" />
    </LinearLayout>

    <TextView
        android:id="@+id/tresrr"
        style="@style/BasestyleTextView.TResStyle"
        android:text="@string/default_res" />

</LinearLayout>